<resources>
    <string name="app_name">中級を学ぼう</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_color">Change Color</string>
    <string name="practice_1">I. 正しい答えを１～４の中から１つ選びなさい</string>
    <string name="question_1_1">（１）この絵は（	）に沈んでいる人紋間を表現している。</string>
    <string name="question_1_2">（２）すきな音楽を聞くことは、心の（	）になる。</string>
    <string name="question_1_3">（３）「document」は日本語で（	）と書く。</string>
    <string name="question_1_4">（4）なぜ日本人は歩くのが遠い（	）。</string>
    <string name="question_1_5">（５）活発な子供は（	）がないと言われている。</string>
    <string name="question_1_6">（６）子供たちが歌（	）合わせて踊っている。</string>
    <string name="question_1_7_1">日本語の勉強はより難しくなってきた。</string>
    <string name="question_1_7_2">日本語の勉強はもっと難しくなってきた。</string>

    <string name="question_1_10"></string>
</resources>
